--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://iamckn.github.io
+url: http://www.cke.io
 title: My Octopress Blog
 subtitle: A blogging framework for hackers.
 author: Your Name
