--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: cryptoke.github.io
+url: http://cryptoke.github.io
 title: crypto ke
 subtitle: information security
 author: crypto ke
