--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ recent_posts: 5       # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 excerpt_separator: "<!--more-->"
 
-titlecase: true       # Converts page and post titles to titlecase
+titlecase: false       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
@@ -104,7 +104,12 @@ navigation:
 - text: home
   url: /index.html
 - text: security testing
+  url: /testing.html
 - text: training
+  url: /training.html
 - text: research
+  url: /research.html
 - text: about
+  url: /about.html
 - text: contacts
+  url: /contacts.html
